@@ -39,4 +39,6 @@ Changelog of all the versions of AndroidStatus
  * added in message broadcast receivers
  * added icons to the menu items
  * added ability to change PH label
+ * switched to service to communicate with controller
+ 
  
